# PRAVETZ-8D-Oric-Atmos

./: .README.md.kate-swp  README.html  README.md  test.html
ROMs/: 8DFDD_PROMS.piz
STL/KEYBOARD/: PRAVETZ-8D-V4.4 - LED-spacer.stl  PRAVETZ-8D-V4.4 - keyboard-mask.stl
STL/KEYBOARD/KEYs/: KEY_ENTER.stl  KEY_F1.stl  KEY_F2.stl  KEY_F3.stl  KEY_F4.stl  KEY_F5.stl  KEY_SHIFT_RIGHT.stl  KEY_Space.stl
STL/KEYBOARD/KEYs/17_17/: KEY_-.stl  KEY_0.stl  KEY_1.stl  KEY_2.stl  KEY_3.stl  KEY_4.stl  KEY_5.stl  KEY_6.stl  KEY_7.stl  KEY_8.stl  KEY_9.stl  KEY_@.stl  KEY_A.stl  KEY_Arrow_up.stl  KEY_B.stl  KEY_C.stl  KEY_CL.stl  KEY_Ctrl.stl  KEY_D.stl  KEY_DEL.stl  KEY_E.stl  KEY_ESC.stl  KEY_F.stl  KEY_G.stl  KEY_H.stl  KEY_I.stl  KEY_J.stl  KEY_K.stl  KEY_L.stl  KEY_LSlash.stl  KEY_M.stl  KEY_N.stl  KEY_NMI.stl  KEY_O.stl  KEY_P.stl  KEY_Q.stl  KEY_R.stl  KEY_RSlash.stl  KEY_S.stl  KEY_T.stl  (+13 more)
STL/PRAVETZ-8D/: PRAVETZ-8D - FDD_support.stl  PRAVETZ-8D - base.stl  PRAVETZ-8D - display_back.stl  PRAVETZ-8D - display_front.stl  PRAVETZ-8D - hinge_left.stl  PRAVETZ-8D - hinge_right.stl  PRAVETZ-8D - keyboard.stl  PRAVETZ-8D - top.stl
firmware/: 8D-FDD-Logic.uf2
firmware/IO_Expander_Logic/: 8D-FDD-Logic.cpp  CMakeLists.txt  HardwareDefines.hpp  eprom_floppy_content.hpp  pio_init.hpp
firmware/IO_Expander_Logic/pio/: extra16kRAM-08-10.2024.pio  extra16kRAM-bak.pio  extra16kRAM-new.pio  extra16kRAM.pio
